vlib/v/checker/tests/incorrect_name_sum_type.out
vlib/v/checker/tests/incorrect_name_sum_type.vv:1:1: error: sum type `integer` must begin with capital letter
    1 | type integer = i16 | i64 | i8 | int
      | ~~~~~~~~~~~~
    2 | type Integer = i16 | i64 | i8 | int
    3 |
vlib/v/checker/tests/incorrect_name_sum_type.vv:4:1: error: method overrides built-in sum type method
    2 | type Integer = i16 | i64 | i8 | int
    3 | 
    4 | fn (i Integer) type_idx() {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~
    5 | }
    6 |
vlib/v/checker/tests/incorrect_name_sum_type.vv:7:1: error: method overrides built-in sum type method
    5 | }
    6 | 
    7 | fn (i Integer) type_name() {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~
    8 | }
