vlib/v/checker/tests/incorrect_name_sum_type.vv
type integer = i16 | i64 | i8 | int
type Integer = i16 | i64 | i8 | int

fn (i Integer) type_idx() {
}

fn (i Integer) type_name() {
}
